2005-02-06  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Files under CVS): Explain the role of the
	AM_GNU_GETTEXT_VERSION argument.

2005-02-05  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Release Management): New section.
	Suggested by Karl Berry.

2005-02-04  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Plural forms): Add info about Vietnamese.
	Explanations by Clytie Siddall <clytie@riverland.net.au>.

2005-01-20  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Scheme): Correct information about setlocale.

2005-01-16  Bruno Haible  <bruno@clisp.org>

	Support for Scheme.
	* gettext.texi (PO Files): Mention scheme-format.
	(scheme-format): New subsection.
	(Scheme): New subsection.
	* xgettext.texi: Document Scheme source language. Document that it is
	applicable to --flag.

2005-01-11  Bruno Haible  <bruno@clisp.org>

	* gettext.texi: Put the table of contents at the beginning, after the
	titlepage, not at the end.

2004-11-13  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Preparing Shell Scripts): Document extra backslashing.

2004-09-08  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add FAQ.html.

2004-09-02  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Aspects): Tweak language: ISO-8859-1 is not a font.
	Reported by Vera Mickael <vera.mickael@free.fr>.

2004-08-30  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Plural forms): Czech is now like Slovak.
	Reported by Stepan Kasal <kasal@ucw.cz>.

2004-08-11  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Aspects): Fix typo in ISO standard number.
	Patch by <bethor@gmx.li>.

2004-07-13  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Python): Remove mention of a bug that was fixed in
	Python 2.3.x.
	Reported by Karl Chen <quarl@hkn.eecs.berkeley.edu>.

2004-02-27  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Plural forms): Add info about Serbian.
	Reported by Danilo Segan <danilo@gnome.org>.

2004-02-24  Bruno Haible  <bruno@clisp.org>
