@@ -1,3 +1,9 @@
+2005-02-12  Bruno Haible  <bruno@clisp.org>
+
+	* tutorial.html: New file, from Gora Mohanty with modifications:
+	Remove the navigation panel. Don't use the -s option.
+	* Makefile.am (doc_DATA): Add tutorial.html.
+
 2005-02-06  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (Files under CVS): Explain the role of the
